[gd_scene load_steps=4 format=3 uid="uid://ccinb7who4l7m"]

[ext_resource type="Theme" uid="uid://cpg05nvdgcadp" path="res://assets/themes/normal_theme.tres" id="1_lt3lj"]
[ext_resource type="Script" uid="uid://bqjvkmxpqghv" path="res://scenes/base_page/base_page.gd" id="1_quvtj"]
[ext_resource type="Texture2D" uid="uid://1hygobvvi5gb" path="res://icon.svg" id="2_57trt"]

[node name="BasePage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_lt3lj")
script = ExtResource("1_quvtj")

[node name="Nodes" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="TopBar" type="Control" parent="Nodes"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Banner" type="TextureRect" parent="Nodes/TopBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_57trt")
expand_mode = 1

[node name="PageArea" type="HBoxContainer" parent="Nodes"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="PageContent" type="Control" parent="Nodes/PageArea"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Background" type="ColorRect" parent="Nodes/PageArea/PageContent"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Elements" type="VBoxContainer" parent="Nodes/PageArea/PageContent"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="DownArea" type="ColorRect" parent="Nodes/PageArea/PageContent/Elements"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[node name="Buttons" type="HBoxContainer" parent="Nodes/PageArea/PageContent/Elements/DownArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100
alignment = 1

[node name="NextButton" type="Button" parent="Nodes/PageArea/PageContent/Elements/DownArea/Buttons"]
layout_mode = 2
size_flags_vertical = 0
focus_mode = 0
text = "NEXT"

[node name="UpgradeShopButton" type="Button" parent="Nodes/PageArea/PageContent/Elements/DownArea/Buttons"]
layout_mode = 2
size_flags_vertical = 0
focus_mode = 0
text = "Upgrades Shop"

[node name="SaveGameButton" type="Button" parent="Nodes/PageArea/PageContent/Elements/DownArea/Buttons"]
layout_mode = 2
size_flags_vertical = 0
focus_mode = 0
text = "Save Game"

[node name="LoadSaveButton" type="Button" parent="Nodes/PageArea/PageContent/Elements/DownArea/Buttons"]
layout_mode = 2
size_flags_vertical = 0
focus_mode = 0
text = "Load Save"

[node name="PageScrollBar" type="VScrollBar" parent="Nodes/PageArea"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
page = 100.0

[node name="PageLoading" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.78431374)

[node name="Label" type="Label" parent="PageLoading"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -268.0
offset_top = -68.5
offset_right = 268.0
offset_bottom = 68.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "LOADING..."
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="Nodes/PageArea" to="." method="_on_page_area_mouse_entered"]
[connection signal="mouse_exited" from="Nodes/PageArea" to="." method="_on_page_area_mouse_exited"]
[connection signal="pressed" from="Nodes/PageArea/PageContent/Elements/DownArea/Buttons/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="Nodes/PageArea/PageContent/Elements/DownArea/Buttons/UpgradeShopButton" to="." method="_on_upgrade_shop_button_pressed"]
[connection signal="pressed" from="Nodes/PageArea/PageContent/Elements/DownArea/Buttons/SaveGameButton" to="." method="_on_save_game_button_pressed"]
[connection signal="pressed" from="Nodes/PageArea/PageContent/Elements/DownArea/Buttons/LoadSaveButton" to="." method="_on_load_save_button_pressed"]
[connection signal="value_changed" from="Nodes/PageArea/PageScrollBar" to="." method="_on_page_scroll_bar_value_changed"]
